--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "declarations": true
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-egg-temp",
-    "stop": "egg-scripts stop --title=egg-server-egg-temp",
+    "start": "egg-scripts start --port=5067 --daemon --title=egg-server-egg-matatakiMDServer",
+    "stop": "egg-scripts stop --title=egg-server-egg-matatakiMDServer",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test-local": "egg-bin test",
